WEB APP VE WIN FORM APP BİTTİ.

--- a/BankamatikWEBUI/Views/Shared/_Layout.cshtml
+++ b/BankamatikWEBUI/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     var username = Context.Session.GetString("username");
+    var role = Context.Session.GetString("role");
 }
 
 <!DOCTYPE html>
@@ -34,6 +35,18 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Index">Accounts</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Transaction" asp-action="Index">Transactions</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Currency" asp-action="Index">Currencies</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Loan" asp-action="Index">Loans</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Log" asp-action="Index">Logs</a>
                             </li>
                         }
                     </ul>
